Tests/a1/reject/04.ul
int[2] main (int x==3) {
	a;
}